[package]
name = "tachys"
version = "0.1.0-gamma3"
authors = ["Greg Johnston"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/leptos-rs/leptos"
description = "Tools for building reactivity-agnostic, renderer-generic, statically-typed view trees for user interface libraries."
rust-version = "1.76"
edition = "2021"

[dependencies]
throw_error = { git = "https://github.com/leptos-rs/leptos", rev = "ee66f6c3957d79bcf214cdf275daca605b93c740" }
any_spawner = { git = "https://github.com/leptos-rs/leptos", rev = "ee66f6c3957d79bcf214cdf275daca605b93c740", optional = true }
const_str_slice_concat = { git = "https://github.com/leptos-rs/leptos", rev = "ee66f6c3957d79bcf214cdf275daca605b93c740" }
either_of = { git = "https://github.com/leptos-rs/leptos", rev = "ee66f6c3957d79bcf214cdf275daca605b93c740" }
next_tuple = { git = "https://github.com/leptos-rs/leptos", rev = "ee66f6c3957d79bcf214cdf275daca605b93c740" }
or_poisoned = { git = "https://github.com/leptos-rs/leptos", rev = "ee66f6c3957d79bcf214cdf275daca605b93c740" }
reactive_graph = { git = "https://github.com/leptos-rs/leptos", rev = "ee66f6c3957d79bcf214cdf275daca605b93c740", optional = true }
oco_ref = { git = "https://github.com/leptos-rs/leptos", rev = "ee66f6c3957d79bcf214cdf275daca605b93c740", optional = true }
once_cell = "1.19"
paste = "1.0"
drain_filter_polyfill = "0.1.3"
indexmap = "2.3"
rustc-hash = "2.0"
futures = "0.3.30"
parking_lot = "0.12.3"
itertools = "0.13.0"
send_wrapper = "0.6.0"
linear-map = "1.2"
tracing = { version = "0.1.40", optional = true }

[dev-dependencies]
tokio-test = "0.4.4"
tokio = { version = "1.39", features = ["rt", "macros"] }

[features]
default = ["oco", "reactive_graph", "tracing"]             # enables event delegation
oco = ["dep:oco_ref"]
nightly = ["reactive_graph/nightly"]
reactive_graph = ["dep:reactive_graph", "dep:any_spawner"]
tracing = ["dep:tracing"]

[package.metadata.cargo-all-features]
denylist = ["tracing"]
