[package]
name = "tachys"
version = "0.2.10"
authors = ["Greg Johnston"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/leptos-rs/leptos"
description = "Tools for building reactivity-agnostic, renderer-generic, statically-typed view trees for user interface libraries."
rust-version = "1.76"
edition = "2021"

[dependencies]
throw_error = "0.3.1"
any_spawner = { version = "0.3.0", optional = true }
either_of = "0.1.6"
next_tuple = "0.1.0"
or_poisoned = "0.1.0"
reactive_graph = { version = "0.2.9", optional = true }
reactive_stores = { version = "0.3.0", optional = true }
oco_ref = { version = "0.2.1", optional = true }
paste = "1.0"
drain_filter_polyfill = "0.1.3"
indexmap = "2.6"
rustc-hash = "2.0"
futures = "0.3.31"
parking_lot = "0.12.3"
itertools = "0.14.0"
tracing = { version = "0.1.40", optional = true }
erased = "0.1.2"

[dev-dependencies]
tokio-test = "0.4"
tokio = { features = ["rt", "macros"], version = "1.46" }

[build-dependencies]
rustc_version = "0.4"

[features]
tracing = ["dep:tracing"]
default = ["oco", "reactive_graph", "tracing", "reactive_stores"]
oco = ["dep:oco_ref"]
nightly = ["reactive_graph/nightly"]
reactive_graph = ["dep:reactive_graph", "dep:any_spawner"]
reactive_stores = ["reactive_graph", "dep:reactive_stores"]

[package.metadata.cargo-all-features]
denylist = ["tracing"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(leptos_debuginfo)',
  'cfg(erase_components)',
  'cfg(rustc_nightly)',
] }
